added content to showcase page

--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -31,7 +31,7 @@
             <nav class="nav-full-height">
                 <ul class="nav">
                     <li>
-                        <a href="index.html">HOME</a>
+                        <a href="/">HOME</a>
                     </li>
                     <li>
                         <a href="about.html">ABOUT</a>
@@ -46,7 +46,7 @@
                         <a href="#">CONNECT</a>
                     </li>
                 </ul>
-                <a id="home-icon" href="index.html">
+                <a id="home-icon" href="/">
                     <div class="home-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px"  viewBox="0 0 500 500" preserveAspectRatio="xMinYMin meet" xml:space="preserve" class="style0"><style>.style0{enable-background:   new 0 0 500 500;}</style><style type="text/css">.st0{fill:#fff;}</style><g><g><g><g><path class="st0" d="M273.4 493c-34 0-43.7-40.5-43.8-40.9c0-0.2 0-0.2-0.1-0.3l-0.8-2.2l2.3 0.2c6.6 0.6 13 0.9 19.2 0.9 c15.1 0 30.1-1.7 44.6-5c2.6-0.4 5.4-1 8.5-2.1c86.1-23.9 146.2-102.9 146.2-192.1c0-109.9-89.4-199.3-199.3-199.3 C140.4 52.1 51 141.5 51 251.4c0 43.7 13.9 85.2 40.3 120c25.5 33.7 61.7 58.9 102 70.9l0.1 0l0.1 0c0.8 0.4 20.1 9.1 16.3 24.9 c-0.2 1.6-3 17.6-21.6 17.6c-1.8 0-3.7-0.2-5.7-0.5l-0.1 0l-0.1 0c-49.4-14.4-93.8-45.1-125.2-86.3 C24.6 355.6 7.5 304.9 7.5 251.4C7.5 117.5 116.4 8.6 250.3 8.6C384.1 8.6 493 117.5 493 251.4c0 60.7-22.6 118.8-63.6 163.7 c-40.8 44.6-96.1 72.3-155.9 78L273.4 493L273.4 493z"/></g></g><g><g><path class="st0" d="M250.3 453.8c-6.5 0-13-0.3-19.5-0.9l-1.1-0.1l-0.2-1.1c-6.1-29.4 0-126.8 0.1-127.8l0-0.1l0.4-2.4l1.4 0.1 c6.1 0.6 12.6 0.9 19.3 0.9c6.6 0 12.9-0.3 18.7-0.8l1.8-0.2l-0.1 1.8c-0.8 11.6-2.3 43.2-0.9 86.7l0 0.1 c-0.1 0.8-1.4 20.6 7.7 30.5c3.4 3.6 7.8 5.5 13.2 5.5c1.3 0 2.6-0.1 3.9-0.3l0.9-0.1l0.5 2.9l-0.9 0.2 C280.9 452 265.7 453.8 250.3 453.8z"/></g></g><g><g><path class="st0" d="M293.5 446l1.4-0.3c2.8-0.6 5.6-1.3 8.5-2.2l0.9-0.3l0.9 2.8l-0.9 0.3c-3.2 1.2-6.1 2-8.9 2.3l-1.4 0.2 L293.5 446z"/></g></g><g><g><path class="st0" d="M250.7 325.5c-7 0-13.6-0.3-19.6-0.9c-7.4-0.8-13.9-2-19.4-3.7c-10-3.1-17.8-7.4-23.3-12.6 c-5.5-5.2-9.3-11.4-11.3-18.4c-1.9-6.8-2.9-13.9-2.9-21.3V246l41.1 0h111.8l0 22.6c0 7.3-1 14.4-2.9 21.3 c-2 6.9-5.8 13.1-11.3 18.4c-5.5 5.2-13.4 9.5-23.3 12.6c-5.6 1.8-12.1 3-19.9 3.8C263.8 325.2 257.4 325.5 250.7 325.5z"/></g></g><g><g><path class="st0" d="M215.3 249.1c-8.6 0-15.6-4.6-15.6-10.2v-20.7l31.9 0l0 20.8C231.6 244.5 224.3 249.1 215.3 249.1 L215.3 249.1z"/></g></g><g><g><path class="st0" d="M284.5 249.1c-8.6 0-15.6-4.6-15.6-10.2v-20.7l31.9 0l0 20.8C300.8 244.5 293.5 249.1 284.5 249.1 L284.5 249.1z"/></g></g><g><g><path class="st0" d="M174.1 249.1c-11.3 0-20.5-7-20.5-15.6c0-8.8 9.4-16.3 20.5-16.3h28.6l0.1 4l-25.6 0l0 27.9H174.1z"/></g></g><g><g><path class="st0" d="M174.3 249.1l0-30.9l28.5 0l0 20.8c0 3.8 5.7 7.1 12.5 7.1h1.5v2.9l-1.4 0.2H174.3z"/></g></g><g><g><path class="st0" d="M214.4 249.1l0-3l1 0c7-0.1 13.2-3.4 13.2-7.2v-20.7l43.4 0l0 20.8c0 3.8 5.7 7.1 12.5 7.1h1.5v2.9 l-1.4 0.2H214.4z"/></g></g><g><g><path class="st0" d="M283.6 249.1l0-3l1 0c7-0.1 13.2-3.4 13.2-7.2v-20.7l29.4 0l0 30.9H283.6z"/></g></g><g><g><path class="st0" d="M324.1 249.1l0-27.9l-26.2 0l-0.1-4l28.7 0c11.1 0 20.5 7.4 20.5 16.2c0 8.6-9.2 15.6-20.5 15.6H324.1z"/></g></g><g><g><polygon class="st0" points="199.8,221.2 199.7,217.2 231.6,217.2 231.7,221.2"/></g></g><g><g><polygon class="st0" points="228.7,221.2 228.5,217.2 271.9,217.2 272,221.2"/></g></g><g><g><polygon class="st0" points="269,221.2 268.9,217.2 300.8,217.2 300.9,221.2"/></g></g><g><g><path class="st0" d="M199.8 220.2l0-50.6c0-5.6 7-10.2 15.6-10.2c9 0 16.3 4.6 16.3 10.2v50.6H199.8z"/></g></g><g><g><path class="st0" d="M269 220.2l0-50.6c0-5.6 7-10.2 15.6-10.2c9 0 16.3 4.6 16.3 10.2v50.6H269z"/></g></g></g></g></svg>
                     </div>
@@ -61,13 +61,14 @@
             <!-- End navbar -->
 
         <!-- Header -->
-        <header class="fixed about-header">
-            <!--<img class="header-img"src="images/digitaldepot.jpg" alt=""> -->
+        <header class="fixed showcase-header">
+            <div class="showcase-header-bg"></div>
         </header>
-        <div class="header-text fixed text-center">
+        <div class="showcase-header-text fixed text-center">
             <h1>
                 Showcase
             </h1>
+            <p>- our work -</p>
         </div>
         <div class="header-spacer"></div>
         <div class="scroll-down" id="scroll-down-showcase">
@@ -77,106 +78,194 @@
             </div>
         </div>
         <!-- End header -->
-			<div id="bl-main" class="bl-main">
-				<section>
-					<div class="bl-box">
-						<h2 class="">KCR Area</h2>
-					</div>
-					<div class="bl-content">
-						<ul id="bl-work-items">
-							<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
-							<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
-							<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
-							<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
-						</ul>
-					</div>
-					<span class="bl-icon bl-icon-close"></span>
-				</section>
-				<section id="bl-work-section">
-					<div class="bl-box">
-						<h2 class="">OpenFM</h2>
-					</div>
-					<div class="bl-content">
-						
-						<ul id="bl-work-items">
-							<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
-							<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
-							<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
-							<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
-						</ul>
-					</div>
-					<span class="bl-icon bl-icon-close"></span>
-				</section>
-				<section>
-					<div class="bl-box">
-						<h2 class="">Community Creators</h2>
-					</div>
-					<div class="bl-content">
-						<ul id="bl-work-items">
-							<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
-							<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
-							<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
-							<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
-						</ul>
-					</div>
-					<span class="bl-icon bl-icon-close"></span>
-				</section>
-				<section>
-					<div class="bl-box">
-						<h2 class="">Memoirs of Guinness</h2>
-					</div>
-					<div class="bl-content">
-						<ul id="bl-work-items">
-							<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
-							<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
-							<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
-							<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
-						</ul>
-					</div>
-					<span class="bl-icon bl-icon-close"></span>
-				</section>
-				<!-- Panel items for the works -->
-				<div class="bl-panel-items" id="bl-panel-work-items">
-					<div data-panel="panel-1">
-						<div>
-							<img src="http://lorempixel.com/200/200/cats/1" />
-							<h3>Fixie bespoke</h3>
-							<p>Iphone artisan direct trade ethical Austin. Fixie bespoke banh mi ugh, deep v vinyl hashtag. Tumblr gentrify keffiyeh pop-up iphone twee biodiesel. Occupy american apparel freegan cliche. Mustache trust fund 8-bit jean shorts mumblecore thundercats. Pour-over small batch forage cray, banjo post-ironic flannel keffiyeh cred ethnic semiotics next level tousled fashion axe. Sustainable cardigan keytar fap bushwick bespoke.</p>
-						</div>
-					</div>
-					<div data-panel="panel-2">
-						<div>
-							<img src="http://lorempixel.com/200/200/cats/2" />
-							<h3>Chillwave mustache</h3>
-							<p>Squid vinyl scenester literally pug, hashtag tofu try-hard typewriter polaroid craft beer mlkshk cardigan photo booth PBR. Chillwave 90's gentrify american apparel carles disrupt. Pinterest semiotics single-origin coffee craft beer thundercats irony, tumblr bushwick intelligentsia pickled. Narwhal mustache godard master cleanse street art, occupy ugh selfies put a bird on it cray salvia four loko gluten-free shoreditch.</p>
-						</div>
-					</div>
-					<div data-panel="panel-3">
-						<div>
-							<img src="http://lorempixel.com/200/200/cats/3" />
-							<h3>Austin hella</h3>
-							<p>Ethical cray wayfarers leggings vice, seitan banksy small batch ethnic master cleanse. Pug chillwave etsy, scenester meh occupy blue bottle tousled blog tonx pinterest selvage mixtape swag cosby sweater. Synth tousled direct trade, hella Austin craft beer ugh chambray.</p>
-						</div>
-					</div>
-					<div data-panel="panel-4">
-						<div>
-							<img src="http://lorempixel.com/200/200/cats/4" />
-							<h3>Brooklyn dreamcatcher</h3>
-							<p>Fashion axe 90's pug fap. Blog wayfarers brooklyn dreamcatcher, bicycle rights retro YOLO. Wes anderson lomo 90's food truck 3 wolf moon, twee jean shorts. Iphone small batch twee wolf yr before they sold out. Brooklyn echo park cred, portland pug selvage flannel seitan tousled mcsweeney's.</p>
-						</div>
-					</div>
-					<nav>
-						<span class="bl-next-work">&gt; Next Project</span>
-						<span class="bl-icon bl-icon-close"></span>
-					</nav>
+		<div class="showcase-intro">
+			<div class="clearfix">
+				<div class="column half text-center">
+					<h3>
+						Transform your vision into a business reality
+					</h3>
+					<hr />
 				</div>
-			</div> <!-- bl-main -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script src="scripts/boxlayout.js"></script>
+				<div class="column half">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+					</p>
+				</div>
+			</div>
+			<div class="clearfix showcase-intro-buttons">
+				<div class="column full text-center">
+					<div class="column half">
+						<i class="fa fa-paper-plane"></i>
+						<br />
+						<a href="#case-studies">
+							<button>
+								Case Studies
+							</button>
+						</a>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						</p>
+					</div>
+					<div class="column half">
+						<i class="fa fa-pencil"></i>
+						<br />
+						<a href="#work">
+							<button>
+								Work
+							</button>
+						</a>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="clearfix block-case-studies" id="case-studies">
+            <div class="column full text-center v-align">
+                <div class="v-aligned">
+                    <h2>
+                    	Case Studies
+                    </h2>
+                </div>
+            </div>
+        </div>
+		
+		<!-- Case Studies -->
+		<div id="bl-main" class="bl-main">
+			<section>
+				<div class="bl-box">
+					<h3 class="">KCR Area</h3>
+				</div>
+				<div class="bl-content">
+					<ul id="bl-work-items">
+						<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
+						<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
+						<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
+						<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
+					</ul>
+				</div>
+				<span class="bl-icon bl-icon-close"></span>
+			</section>
+			<section id="bl-work-section">
+				<div class="bl-box">
+					<h3 class="">OpenFM</h3>
+				</div>
+				<div class="bl-content">
+					
+					<ul id="bl-work-items">
+						<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
+						<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
+						<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
+						<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
+					</ul>
+				</div>
+				<span class="bl-icon bl-icon-close"></span>
+			</section>
+			<section>
+				<div class="bl-box">
+					<h3 class="">Community Creators</h3>
+				</div>
+				<div class="bl-content">
+					<ul id="bl-work-items">
+						<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
+						<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
+						<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
+						<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
+					</ul>
+				</div>
+				<span class="bl-icon bl-icon-close"></span>
+			</section>
+			<section>
+				<div class="bl-box">
+					<h3 class="">Memoirs of Guinness</h3>
+				</div>
+				<div class="bl-content">
+					<ul id="bl-work-items">
+						<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
+						<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
+						<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
+						<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
+					</ul>
+				</div>
+				<span class="bl-icon bl-icon-close"></span>
+			</section>
+			<!-- Panel items for the works -->
+			<div class="bl-panel-items" id="bl-panel-work-items">
+				<div data-panel="panel-1">
+					<div>
+						<img src="http://lorempixel.com/200/200/cats/1" />
+						<h3>Fixie bespoke</h3>
+						<p>Iphone artisan direct trade ethical Austin. Fixie bespoke banh mi ugh, deep v vinyl hashtag. Tumblr gentrify keffiyeh pop-up iphone twee biodiesel. Occupy american apparel freegan cliche. Mustache trust fund 8-bit jean shorts mumblecore thundercats. Pour-over small batch forage cray, banjo post-ironic flannel keffiyeh cred ethnic semiotics next level tousled fashion axe. Sustainable cardigan keytar fap bushwick bespoke.</p>
+					</div>
+				</div>
+				<div data-panel="panel-2">
+					<div>
+						<img src="http://lorempixel.com/200/200/cats/2" />
+						<h3>Chillwave mustache</h3>
+						<p>Squid vinyl scenester literally pug, hashtag tofu try-hard typewriter polaroid craft beer mlkshk cardigan photo booth PBR. Chillwave 90's gentrify american apparel carles disrupt. Pinterest semiotics single-origin coffee craft beer thundercats irony, tumblr bushwick intelligentsia pickled. Narwhal mustache godard master cleanse street art, occupy ugh selfies put a bird on it cray salvia four loko gluten-free shoreditch.</p>
+					</div>
+				</div>
+				<div data-panel="panel-3">
+					<div>
+						<img src="http://lorempixel.com/200/200/cats/3" />
+						<h3>Austin hella</h3>
+						<p>Ethical cray wayfarers leggings vice, seitan banksy small batch ethnic master cleanse. Pug chillwave etsy, scenester meh occupy blue bottle tousled blog tonx pinterest selvage mixtape swag cosby sweater. Synth tousled direct trade, hella Austin craft beer ugh chambray.</p>
+					</div>
+				</div>
+				<div data-panel="panel-4">
+					<div>
+						<img src="http://lorempixel.com/200/200/cats/4" />
+						<h3>Brooklyn dreamcatcher</h3>
+						<p>Fashion axe 90's pug fap. Blog wayfarers brooklyn dreamcatcher, bicycle rights retro YOLO. Wes anderson lomo 90's food truck 3 wolf moon, twee jean shorts. Iphone small batch twee wolf yr before they sold out. Brooklyn echo park cred, portland pug selvage flannel seitan tousled mcsweeney's.</p>
+					</div>
+				</div>
+				<nav>
+					<span class="bl-next-work">&gt; Next Project</span>
+					<span class="bl-icon bl-icon-close"></span>
+				</nav>
+			</div>
+		</div> <!-- bl-main -->
+		<!-- End case studies -->
+
+		<div class="clearfix block-work" id="work">
+            <div class="column full text-center v-align">
+                <div class="v-aligned">
+                    <h2>
+                    	Work
+                    </h2>
+                </div>
+            </div>
+        </div>
+
+		<!-- build:js scripts/vendor.js -->
+        <!-- bower:js -->
+        <script src="../bower_components/jquery/dist/jquery.js"></script>
+        <script src="../bower_components/jquery-waypoints/waypoints.min.js"></script>
+        <script src="../bower_components/jquery-waypoints/shortcuts/sticky-elements/waypoints-sticky.min.js"></script>
+        <script src="../bower_components/skrollr/dist/skrollr.min.js"></script>
+        <!-- endbower -->
+        <!-- endbuild -->
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='//www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X');ga('send','pageview');
+        </script>
+
+        <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/footerreveal.js"></script>
+        <script src="scripts/main.js"></script>
+        <script src="scripts/boxlayout.js"></script>
 		<script>
 			$(function() {
 				Boxlayout.init();
 			});
 		</script>
+        <!-- endbuild -->
 	</body>
 </html>
