cleaned up less files a bit, added services page

--- a/app/index.html
+++ b/app/index.html
@@ -37,13 +37,13 @@
                         <a href="about.html">ABOUT</a>
                     </li>
                     <li>
-                        <a href="#">SERVICES</a>
+                        <a href="services.html">SERVICES</a>
                     </li>
                     <li>
                         <a href="showcase.html">SHOWCASE</a>
                     </li>
                     <li>
-                        <a href="#">CONNECT</a>
+                        <a href="connect.html">CONNECT</a>
                     </li>
                 </ul>
                 <a id="home-icon" href="/">
