case studies styling

--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -221,7 +221,7 @@
 					</div>
 				</div>
 				<nav>
-					<span class="bl-next-work">&gt; Next Project</span>
+					<span class="bl-next-work">&gt; Next</span>
 					<span class="bl-icon bl-icon-close"></span>
 				</nav>
 			</div>
