added work section

--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -237,6 +237,102 @@
                 </div>
             </div>
         </div>
+        <!-- Work -->
+		<div id="bl-main" class="bl-main">
+			<section>
+				<div class="bl-box">
+					<h3 class="">KCR Area</h3>
+				</div>
+				<div class="bl-content">
+					<ul id="bl-work-items">
+						<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
+						<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
+						<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
+						<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
+					</ul>
+				</div>
+				<span class="bl-icon bl-icon-close"></span>
+			</section>
+			<section id="bl-work-section">
+				<div class="bl-box">
+					<h3 class="">OpenFM</h3>
+				</div>
+				<div class="bl-content">
+					
+					<ul id="bl-work-items">
+						<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
+						<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
+						<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
+						<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
+					</ul>
+				</div>
+				<span class="bl-icon bl-icon-close"></span>
+			</section>
+			<section>
+				<div class="bl-box">
+					<h3 class="">Community Creators</h3>
+				</div>
+				<div class="bl-content">
+					<ul id="bl-work-items">
+						<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
+						<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
+						<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
+						<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
+					</ul>
+				</div>
+				<span class="bl-icon bl-icon-close"></span>
+			</section>
+			<section>
+				<div class="bl-box">
+					<h3 class="">Memoirs of Guinness</h3>
+				</div>
+				<div class="bl-content">
+					<ul id="bl-work-items">
+						<li data-panel="panel-1"><a href="#"><img src="http://lorempixel.com/200/200/cats/1" /></a></li>
+						<li data-panel="panel-2"><a href="#"><img src="http://lorempixel.com/200/200/cats/2" /></a></li>
+						<li data-panel="panel-3"><a href="#"><img src="http://lorempixel.com/200/200/cats/3" /></a></li>
+						<li data-panel="panel-4"><a href="#"><img src="http://lorempixel.com/200/200/cats/4" /></a></li>
+					</ul>
+				</div>
+				<span class="bl-icon bl-icon-close"></span>
+			</section>
+			<!-- Panel items for the works -->
+			<div class="bl-panel-items" id="bl-panel-work-items">
+				<div data-panel="panel-1">
+					<div>
+						<img src="http://lorempixel.com/200/200/cats/1" />
+						<h3>Fixie bespoke</h3>
+						<p>Iphone artisan direct trade ethical Austin. Fixie bespoke banh mi ugh, deep v vinyl hashtag. Tumblr gentrify keffiyeh pop-up iphone twee biodiesel. Occupy american apparel freegan cliche. Mustache trust fund 8-bit jean shorts mumblecore thundercats. Pour-over small batch forage cray, banjo post-ironic flannel keffiyeh cred ethnic semiotics next level tousled fashion axe. Sustainable cardigan keytar fap bushwick bespoke.</p>
+					</div>
+				</div>
+				<div data-panel="panel-2">
+					<div>
+						<img src="http://lorempixel.com/200/200/cats/2" />
+						<h3>Chillwave mustache</h3>
+						<p>Squid vinyl scenester literally pug, hashtag tofu try-hard typewriter polaroid craft beer mlkshk cardigan photo booth PBR. Chillwave 90's gentrify american apparel carles disrupt. Pinterest semiotics single-origin coffee craft beer thundercats irony, tumblr bushwick intelligentsia pickled. Narwhal mustache godard master cleanse street art, occupy ugh selfies put a bird on it cray salvia four loko gluten-free shoreditch.</p>
+					</div>
+				</div>
+				<div data-panel="panel-3">
+					<div>
+						<img src="http://lorempixel.com/200/200/cats/3" />
+						<h3>Austin hella</h3>
+						<p>Ethical cray wayfarers leggings vice, seitan banksy small batch ethnic master cleanse. Pug chillwave etsy, scenester meh occupy blue bottle tousled blog tonx pinterest selvage mixtape swag cosby sweater. Synth tousled direct trade, hella Austin craft beer ugh chambray.</p>
+					</div>
+				</div>
+				<div data-panel="panel-4">
+					<div>
+						<img src="http://lorempixel.com/200/200/cats/4" />
+						<h3>Brooklyn dreamcatcher</h3>
+						<p>Fashion axe 90's pug fap. Blog wayfarers brooklyn dreamcatcher, bicycle rights retro YOLO. Wes anderson lomo 90's food truck 3 wolf moon, twee jean shorts. Iphone small batch twee wolf yr before they sold out. Brooklyn echo park cred, portland pug selvage flannel seitan tousled mcsweeney's.</p>
+					</div>
+				</div>
+				<nav>
+					<span class="bl-next-work">&gt; Next</span>
+					<span class="bl-icon bl-icon-close"></span>
+				</nav>
+			</div>
+		</div> <!-- bl-main -->
+		<!-- Work -->
 
 		<!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
