added all sections to about page

--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -28,7 +28,7 @@
         <![endif]-->
 
         <!-- Navbar -->
-            <nav class="nav-full-height">
+            <nav class="nav-reduced">
                 <ul class="nav">
                     <li>
                         <a href="/">HOME</a>
@@ -78,7 +78,7 @@
             </div>
         </div>
         <!-- End header -->
-		<div class="showcase-intro">
+		<section class="showcase-intro">
 			<div class="clearfix">
 				<div class="column half text-center">
 					<h3>
@@ -120,7 +120,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<div class="clearfix block-case-studies" id="case-studies">
             <div class="column full text-center v-align">
                 <div class="v-aligned">
