--- a/app/services.html
+++ b/app/services.html
@@ -28,7 +28,7 @@
         <![endif]-->
 
         <!-- Navbar -->
-            <nav class="nav-full-height">
+            <nav class="nav-reduced">
                 <ul class="nav">
                     <li>
                         <a href="/">HOME</a>
