added contact form

--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -97,7 +97,7 @@
 					<div class="column half">
 						<i class="fa fa-paper-plane"></i>
 						<br />
-						<a href="#case-studies">
+						<a href="#bl-main">
 							<button>
 								Case Studies
 							</button>
