added scroll function to connect page

--- a/app/connect.html
+++ b/app/connect.html
@@ -71,7 +71,7 @@
             <p>- get in touch -</p>
         </div>
         <div class="header-spacer"></div>
-        <div class="scroll-down" id="scroll-down-services">
+        <div class="scroll-down" id="scroll-down-connect">
             <div class="semi-circle"></div>
             <div class="chevron">
                 <i class="fa fa-angle-down"></i>
