added blog nav item, added content to services page

--- a/app/about.html
+++ b/app/about.html
@@ -45,6 +45,9 @@
                     <li>
                         <a href="#">CONNECT</a>
                     </li>
+                    <li>
+                        <a href="/blog">BLOG</a>
+                    </li>
                 </ul>
                 <a id="home-icon" href="index.html">
                     <div class="home-icon">
