--- a/app/connect.html
+++ b/app/connect.html
@@ -45,6 +45,9 @@
                 <li class="nav-active">
                     <a href="connect.html">CONNECT</a>
                 </li>
+                <li>
+                    <a href="/blog">BLOG</a>
+                </li>
             </ul>
             <a id="home-icon" href="/">
                 <div class="home-icon">
@@ -78,7 +81,8 @@
             </div>
         </div>
         <!-- End header -->
-
+        
+        <!--
         <div class="clearfix block-blog">
             <div class="column full text-center v-align">
                 <div class="text-and-button v-aligned">
@@ -92,7 +96,8 @@
                     </a>
                 </div>
             </div>
-        </div>   
+        </div>  
+        --> 
 
         <section class="contact">
             <form class="contact-form">
