--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,9 @@
                     <li>
                         <a href="connect.html">CONNECT</a>
                     </li>
+                    <li>
+                        <a href="/blog">BLOG</a>
+                    </li>
                 </ul>
                 <a id="home-icon" href="/">
                     <div class="home-icon">
