--- a/app/services.html
+++ b/app/services.html
@@ -36,14 +36,17 @@
                     <li>
                         <a href="about.html">ABOUT</a>
                     </li>
-                    <li>
+                    <li class="nav-active">
                         <a href="#">SERVICES</a>
                     </li>
-                    <li class="nav-active">
+                    <li>
                         <a href="showcase.html">SHOWCASE</a>
                     </li>
                     <li>
                         <a href="#">CONNECT</a>
+                    </li>
+                    <li>
+                        <a href="/blog">BLOG</a>
                     </li>
                 </ul>
                 <a id="home-icon" href="/">
@@ -78,6 +81,101 @@
             </div>
         </div>
         <!-- End header -->
+
+        <section class="services-blocks">
+            <div class="clearfix block-design">
+                <div class="column full v-align">
+                    <div class="title-and-text v-aligned">
+                        <h2>Design</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magnam, pariatur. Aliquam, ad, repudiandae, est nisi quam nesciunt excepturi laboriosam neque iusto saepe qui eos recusandae ullam inventore quo quisquam!
+                        </p>
+                        <ul>
+                            <li>Branding</li>
+                            <li>Web Design</li>
+                            <li>Advertisements</li>
+                            <li>Print</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix block-marketing">
+                <div class="column full v-align">
+                    <div class="title-and-text v-aligned">
+                        <h2>Marketing</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, doloribus, distinctio, dicta, eveniet reiciendis et cupiditate doloremque id suscipit aliquid eligendi earum repudiandae! Delectus libero enim tempora perferendis consequuntur repellat.
+                        </p>
+                        <ul>
+                            <li>
+                                Online:
+                                <ul>
+                                    <li>Facebook</li>
+                                    <li>Twitter</li>
+                                    <li>Google Plus</li>
+                                    <li>Something Else</li>
+                                </ul>
+                            </li>
+                            <li>
+                                Offline:
+                                <ul>
+                                    <li>Something</li>
+                                    <li>Something Else</li>
+                                    <li>Another Thing</li>
+                                    <li>Yet Another Thing</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix block-training">
+                <div class="column full v-align">
+                    <div class="title-and-text v-aligned">
+                        <h2>Training</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, cumque, tempore, saepe, perspiciatis accusamus facere ea est labore quos doloremque officiis dolore nostrum consectetur culpa quasi possimus distinctio perferendis porro.
+                        </p>
+                        <ul>
+                            <li>Social Media</li>
+                            <li>Design</li>
+                            <li>Photography</li>
+                            <li>Cloud Computing</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix block-analysis">
+                <div class="column full v-align">
+                    <div class="title-and-text v-aligned">
+                        <h2>Analysis</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, laudantium, quidem eius assumenda aliquam autem beatae sit culpa veniam ab illo ad veritatis modi aspernatur reiciendis quibusdam quia tenetur omnis.
+                        </p>
+                        <ul>
+                            <li>Social</li>
+                            <li>Google Analytics</li>
+                            <li>Business Reviews</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix block-consulting">
+                <div class="column full v-align">
+                    <div class="title-and-text v-aligned">
+                        <h2>Consulting</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque a dignissimos ratione officia debitis dolorem quibusdam quod ex! Cum, illo rerum facere ratione dignissimos velit ut odit facilis doloribus dolore!
+                        </p>
+                        <ul>
+                            <li>Thing</li>
+                            <li>Something Else</li>
+                            <li>Another Thing</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
 		
 
 		<!-- build:js scripts/vendor.js -->
